# nvidia-pstated

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nvapi.ps1  nvapi.sh
.github/workflows/: build.yml
src/: main.c  nvapi.c  nvapi.h  nvapi_linux.c  nvml.c  nvml.h  utils.c  utils.h
